# ps5-ezremote-dpi

./: CMakeLists.txt  README.md
source/: main.cpp  sceAppInstUtil.h
